# dataomen

./: .coverage  .gitignore  .npmrc  .renderignore  .vercelignore  Dockerfile  compute_worker.py  data_sanitizer.rs  fix.js  h  main.py  middleware.ts  models.py  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  pytest.ini  render.yaml  requirements.txt  run_poller.py  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
.do/: app.yaml
api/: auth.py  broker.py  database.py  dependencies.py  main.py  models.py  recovery_common.py  tasks.py  worker.py  worker_lifecycle.py  worker_main.py
api/rust_core/: Cargo.toml
api/rust_core/src/: data_sanitizer.rs  sync_engine.rs
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
components/: ChatInterface.tsx  MessageBubble.tsx  VegaChart.tsx
docs/: crawl_pipeline_runbook.md
hooks/: use-campaigns.ts  useAgents.ts  useAnomalyDeepLink.ts  useAsyncJob.ts  useAsyncProvisioning.ts  useChatHistory.ts  useIntegrationOrchestrator.ts  useSmartAutoScroll.ts  useStreamParser.ts  useVisible.ts
lib/: api-client.ts  api-security.ts  arcli-client.ts  campaign-targets.ts  chart-engine.ts  chat-history.ts  connection-service.ts  entitlements.ts  integration-config.ts  seo-data.tsx  state-machine.ts  tokens.ts  types.ts  utils.ts  workspace-store.ts
scripts/: ACTIVE SELF-HEALING & PRIMARY KEY DRIFT FIX.sql  Outbox_infuctcure2.sql  RLS_security3.sql  RLS_updates.sql  api_keys.sql  assisted_outreach.sql  audit.sql  crawl_pipeline_reliability.sql  email_templates.sql  foundtions1.sql  (+15 more)
(+421 files in other folders)
