[package]
name = "dataomen_core"
version = "0.1.0"
edition = "2021"
# The name of the compiled python module
publish = false 

[lib]
name = "dataomen_core"
# "cdylib" is the precise instruction that allows Python to load this as a native extension
crate-type = ["cdylib"]

[dependencies]
# The bridge between Rust and Python
pyo3 = { version = "0.20", features = ["extension-module"] }

# The high-performance dataframe engine (only pulling the required modules)
polars = { version = "0.38", features = ["lazy", "strings", "temporal", "dtype-decimal", "regex"] }

# Cryptography and Hashing (Replacing Python's hashlib/hmac)
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12"

# Serialization (Replacing Python's json module)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = "0.4"
# Add this underneath the other dependencies!
pyo3-polars = "0.14"